--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "مدیریت والیبال پوریا",
   "short_name": "والیبال",
-  "start_url": "./test6.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f4f7fa",
   "theme_color": "#0ea5e9",
